css/style.css
/* ... */
.main .banner .title {
    text-align: center;
}
/* Scale down title font for smaller screens */
@media screen and (min-width: 768px) {
    .main .banner .title h1{
        margin-top: 5%;
        padding-top: 10%;
        font-size: 10rem;
        font-weight: 400;
        line-height: 10rem;
    }
    .main .banner .title h3{
        font-size: 2.5rem;
        padding-top: 2rem;
        font-weight: 500;
    }
}

@media screen and (max-width: 767px) {
    .main .banner .title h1{
        font-size: 22vw;
        font-weight: 400;
    }
    .main .banner .title h3{
        font-size: 6vw;
        padding-top: 1rem;
        font-weight: 500;
    }
}

.main .banner .title .buttons{
    padding: 2rem;
}

/* Turn on lines only for large screens */
@media screen and (min-device-width: 1080px) {
    .main .banner .title .buttons .flex-row::before{
        content: "";
        height: 2px;
        width: 12rem;
        background: black;
        display: inline-block;
        transform: translateY(-3px);
    }
    .main .banner .title .buttons .flex-row::after{
        content: "";
        height: 2px;
        width: 12rem;
        background: black;
        display: inline-block;
        transform: translateY(-3px);
    }
}

.main .banner .terminal {
    margin: 1rem 1.5rem 1.5rem 1.5rem;
    height: 15rem;
    border: thick solid;
    border-image-slice: 1;
    border-image-source: linear-gradient(to right, #743ad5, #d53a3a);
}
/* End Banner Area */

/* Start About Area */

.main .about-area img{
    animation: slideInFromLeft 0.5s ease-in;
    width: 30rem;
}
.main .about-area .card{
    animation: slideInFromRight 0.5s ease-in;
    margin-top: 3rem;
    text-align: center;
}
@media screen and (min-device-width: 536px) {
    .main .about-area{
        text-align: center;
        padding-top: 10rem;
        padding-bottom: 10rem;
    }
    .main .about-area .card-header{
        font-weight: 550;
        font-size: 4rem;
    }
    .main .about-area .card h5{
        font-size: 1.7rem;
        font-weight: 400;
    }
}

@media screen and (max-device-width: 535px) {
    .main .about-area{
        text-align: center;
        padding-top: 5rem;
        padding-bottom: 5rem;
    }
    .main .about-area .card-header{
        font-weight: 550;
        font-size: 14vw;
    }
    .main .about-area .card h5{
        font-size: 6vw;
        font-weight: 400;
    }
}

/* End About Area */

/* Start Project Area */
@media screen and (min-device-width: 536px) {
    .main .project-area h1{
        font-size: 4rem;
        padding-bottom: 1rem;
    }
}

@media screen and (max-device-width: 535px) {
    .main .project-area h1{
        font-size: 14vw;
        padding-bottom: 1rem;
    }
}
.main .project-area{
    padding-top: 4rem;
    min-height: fit-content;
}

.main .project-area .grid{
    min-height: fit-content;
}
.main .project-area .button-group{
    margin-top: 1rem;
    margin-bottom: 2rem;
}

.main .project-area .button-group .active{
    background-color: #43caff;
    color: white;
    transition: 0.5s;
}

.main .project-area .button-group button{
    background: transparent;
    border: none;
    font: normal 550 24px/24px var(--roboto);
    padding: 1rem;
    text-transform: uppercase;
}

.main .project-area .button-group button:hover{
    color: var(--primary-color);
    transition: 0.5s;
}

.main .project-area h4{
    font: normal 600 25px/25px var(--roboto);
}
@media screen and (min-device-width: 1201px) {
    .main .project-area .grid .our-project a img{
        max-width: 22rem;
    }
}

@media screen and (max-device-width: 1200px) {
    .main .project-area .grid .our-project a img{
        max-width: 19rem;
    }
}

.main .project-area .grid .our-project a img:hover{
    filter: brightness(1.05) drop-shadow(0px 0px 10px #ababab);
    transition: 0.5s;
}

.modal .btn {
    font-family: var(--roboto);
    font-weight: 500;
}
.modal p,
.modal h3{
    margin: 1rem 1rem 0 1rem;
}

.modal .list{
    margin-left: 1rem;
}

.modal .carousel{
    margin: 1rem 1rem;
}
.modal .carousel img{
    max-height: 40rem;
}

@media screen and (min-device-width: 992px) {
    .carousel-control-next-icon{
        width: 2rem;
        height: 2rem;
        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
    }
    .carousel-control-prev-icon{
        width: 2rem;
        height: 2rem;
        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
    }
    .modal  .carousel-control-next{
        background-color: rgba(255, 255, 255, 0.548);
        width: fit-content;
        height: fit-content;
        top: 50%;
        bottom: 50%;
        padding: 1rem;
    }
    .modal .carousel-control-prev{
        background-color: rgba(255, 255, 255, 0.548);
        width: fit-content;
        height: fit-content;
        top: 50%;
        bottom: 50%;
        padding: 1rem;
    }
}
/* ... */

